--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,13 @@
 <head>
   <link rel="icon" href="/favicon/favicon.png" type="image/x-icon" />
 
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
+
+
   <meta content="width=device-width,initial-scale=1.0" name="viewport" />
   <meta content="IE=edge" http-equiv="X-UA-Compatible" />
   <meta charset="utf-8" />
