--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -47,7 +47,7 @@ caption,
 details > summary {
   margin: 0;
   font-weight: 700;
-  font-family: $title-font-stack;
+  font-family: Asap, sans-serif;
   font-feature-settings: 'case' 1, 'cpsp' 1, 'cswh' 1, 'liga' 1, 'locl' 1,
     'lnum' 1, 'pnum' 1, 'titl' 1, 'zero' 1;
 
@@ -55,7 +55,7 @@ details > summary {
   page-break-after: avoid;
 }
 
-h1 {
+%h1 {
   margin-bottom: to-rem(16px);
   font-size: ms(4);
 
@@ -64,7 +64,7 @@ h1 {
   }
 }
 
-h2 {
+%h2 {
   margin-bottom: to-rem(12px);
 
   font-size: ms(3);
@@ -74,7 +74,7 @@ h2 {
   }
 }
 
-h3 {
+%h3 {
   margin-bottom: to-rem(12px);
 
   font-size: ms(2);
@@ -84,18 +84,43 @@ h3 {
   }
 }
 
-h4 {
+%h4 {
   margin-bottom: to-rem(8px);
 
   font-size: ms(2);
   line-height: to-rem(32px);
 }
 
-h5 {
+%h5 {
   margin-bottom: to-rem(8px);
 
   font-size: ms(2);
   line-height: to-rem(32px);
+}
+
+h1,
+.heading-1 {
+  @extend %h1;
+}
+
+h2,
+.heading-2 {
+  @extend %h2;
+}
+
+h3,
+.heading-3 {
+  @extend %h3;
+}
+
+h4,
+.heading-4 {
+  @extend %h4;
+}
+
+h5,
+.heading-5 {
+  @extend %h5;
 }
 
 h1 a,
