--- a/source/stylesheets/partials/_blog.scss
+++ b/source/stylesheets/partials/_blog.scss
@@ -3,3 +3,87 @@
   background-position: 50% 50%;
   background-repeat: no-repeat;
 }
+
+.post {
+  display: flex;
+
+  flex-direction: column;
+}
+
+.post__image {
+  position: relative;
+
+  display: block;
+
+  width: 100%;
+  height: 180px;
+
+  margin-bottom: 25px;
+
+  @media screen and (min-width: breakpoint('desktop')) {
+    width: 100%;
+    height: 250px;
+  }
+
+  a {
+    display: block;
+
+    width: 100%;
+    height: 100%;
+  }
+
+  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
+  }
+
+  .img-subtitle {
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+
+    display: flex;
+
+    justify-content: center;
+
+    width: 80%;
+    max-width: 300px;
+
+    padding: 8px;
+
+    background: black;
+
+    transform: translateX(-50%);
+
+    p {
+      margin-bottom: 0;
+
+      &::after {
+        display: inline-block;
+
+        width: to-rem(4px);
+        height: to-rem(4px);
+
+        margin-right: to-rem(8px);
+        margin-left: to-rem(8px);
+
+        vertical-align: middle;
+
+        background: #ffffff;
+
+        border-radius: 50%;
+
+        content: '';
+      }
+      &:last-of-type::after {
+        content: none;
+      }
+    }
+  }
+}
