--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -5,14 +5,14 @@
     </h2>
 
     <div class="glide">
-      <div class="glide__arrows">
-        <div class="glide__arrows--actions" data-glide-el="controls">
-          <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
-          </button>
-          <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
-          </button>
-        </div>
+
+      <div class="glide__arrows" data-glide-el="controls">
+        <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+        </button>
+        <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+        </button>
       </div>
+
 
       <div class="glide__track" data-glide-el="track">
         <ul class="glide__slides">
