feat: create content

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -2,6 +2,15 @@
 <html lang="{{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}" class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get "rootClass" }} {{ .Params.rootClass }} {{ if eq (getenv "NODE_ENV") "development" }}grid-debug{{ end }} no-js">
 
 {{ partial "head.html" . }}
+{{ partial "breadcrumbs.html" . }}
+
+<header class="title-highlight">
+  <h1>Lala</h1>
+</header>
+
+<div class="breadcrumb">
+
+</div>
 
 <body>
   <div class="main-container internal-pages blog">
