--- a/layouts/partials/benefits.html
+++ b/layouts/partials/benefits.html
@@ -6,7 +6,7 @@
     {{ if .title }}
     <h2 class="title-section">{{ .title }} </h2>
     {{ end }}
-    <div class="benefits-wrap">
+    <div class="three-columns">
       {{ range .list }}
       <div>
         {{ if .title }}
