--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,14 +2,16 @@
 <html lang=" {{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}" class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get "rootClass" }} {{ .Params.rootClass }} {{ if eq (getenv "NODE_ENV") "development" }}grid-debug{{ end }} no-js">
 {{ partial "head.html" . }}
 
-<body class="theme-dark">
+<body class="theme--dark">
   <input type="checkbox" id="menu-controller" class="menu-controller" hidden>
   <div class="main-container">
     {{ partial "header.html" . }}
 
     <main role="main" id="conteudo" class="main">
+      {{ partial "global-citizen.html" . }}
       {{ partial "benefits.html" . }}
       {{ partial "testimonials.html" . }}
+      {{ partial "high-school.html" . }}
       {{ partial "blog.html" . }}
     </main>
     {{ partial "footer.html" . }}
