--- a/source/stylesheets/base/_helpers.scss
+++ b/source/stylesheets/base/_helpers.scss
@@ -155,3 +155,58 @@ textarea {
   }
 }
 
+.one-column {
+  display: grid;
+
+  grid-template-rows: auto;
+
+  width: 100%;
+
+  row-gap: to-rem(24px);
+}
+
+.two-columns {
+  display: grid;
+  /* stylelint-disable-next-line property-no-unknown */
+
+  grid-template-rows: auto;
+
+  width: 100%;
+
+  row-gap: to-rem(24px);
+
+  @media screen and (min-width: breakpoint('tablet__portrait')) {
+    grid-template-columns: 1fr 1fr;
+
+    column-gap: to-rem(24px);
+
+    row-gap: to-rem(32px);
+  }
+}
+
+.three-columns {
+  display: grid;
+  /* stylelint-disable-next-line property-no-unknown */
+
+  grid-template-rows: auto;
+
+  width: 100%;
+
+  row-gap: to-rem(24px);
+
+  @media screen and (min-width: breakpoint('tablet__portrait')) {
+    grid-template-columns: 1fr 1fr;
+
+    column-gap: to-rem(24px);
+
+    row-gap: to-rem(32px);
+  }
+
+  @media screen and (min-width: breakpoint('desktop')) {
+    grid-template-columns: 1fr 1fr 1fr;
+
+    column-gap: to-rem(24px);
+
+    row-gap: to-rem(32px);
+  }
+}
