--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html lang="{{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}" class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get "rootClass" }} {{ .Params.rootClass }} {{ if eq (getenv "NODE_ENV") "development" }}grid-debug{{ end }} no-js">
+<html lang="{{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}"
+  class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get " rootClass" }} {{ .Params.rootClass }} {{ if eq
+  (getenv "NODE_ENV" ) "development" }}grid-debug{{ end }} no-js">
 
 {{ partial "head.html" . }}
-{{ partial "breadcrumbs.html" . }}
 
-<header class="title-highlight">
-  <h1>Lala</h1>
-</header>
-
-<div class="breadcrumb">
-
-</div>
 
 <body>
-  <div class="main-container internal-pages blog">
+  <div class="main-container internal-pages blog__list">
 
-      {{ partial "header.html" . }}
-      <main role="main" id="conteudo" class="main">
+    {{ partial "header.html" . }}
+
+
+    <main role="main" id="conteudo" class="main">
+      {{/*  <header class="title-highlight">
+        <h1>Lala</h1>
+      </header>  */}}
+      <div class="container">
+        {{ partial "breadcrumbs.html" . }}
+      </div>
+
 
       <section class="section">
         <div class="container">
@@ -31,7 +34,7 @@
               {{ end }}
 
               {{ if .Params.imageBeforeText }}
-                <img src="{{ .Params.imageBeforeText }}" alt="{{ .Title }}">
+              <img src="{{ .Params.imageBeforeText }}" alt="{{ .Title }}">
               {{ end }}
 
               {{ .Content }}
@@ -45,27 +48,25 @@
         <div class="container">
           <h2 class="title">{{ i18n "seeAlso" | title }}</h2>
           <ul class="posts">
-              {{ range .Params.relatedProjects }}
-                {{ range where $.Site.Pages "Params.slug" .project }}
-                  <li class="post">
-                    <div class="post__content">
-                      <a href="../{{ .Params.slug }}"><h4>{{ if .Params.shortTitle }} {{ .Params.shortTitle }} {{ else }} {{ .Title }} {{ end }}</h4></a>
-                      <a class="nav-link nav-link--plus--orange" href="../{{ .Params.slug }}">{{ i18n "Title" }}</a>
-                    </div>
-                  </li>
-              {{ end }}
+            {{ range .Params.relatedProjects }}
+            {{ range where $.Site.Pages "Params.slug" .project }}
+            <li class="post">
+              <div class="post__content">
+                <a href="../{{ .Params.slug }}">
+                  <h4>{{ if .Params.shortTitle }} {{ .Params.shortTitle }} {{ else }} {{ .Title }} {{ end }}</h4>
+                </a>
+                <a class="nav-link nav-link--plus--orange" href="../{{ .Params.slug }}">{{ i18n "Title" }}</a>
+              </div>
+            </li>
+            {{ end }}
             {{ end }}
           </ul>
         </div>
       </aside>
       {{ end }}
 
-      {{ if .Params.callToAction }}
-        <!-- {{ partial "call-to-action.html" . }} -->
-      {{ end }}
-
-      </main>
-      {{ partial "footer.html" . }}
+    </main>
+    {{ partial "footer.html" . }}
 
   </div>
 </body>
