--- a/source/stylesheets/abstracts/_config.scss
+++ b/source/stylesheets/abstracts/_config.scss
@@ -96,68 +96,68 @@ $modularscale: (
 /// @todo Customize the colors or add new ones to match your design needs.
 $palette: (
   'blue': (
-    '110': #0047de,
-    'base': #004ff7,
-    '80%': #3372f9,
-    '60%': #6695fa,
-    '30%': #b2cafd,
-    '10%': #e5edfe,
-    '5%': #f2f6ff,
+    '110': rgb(0, 71, 222),
+    'base': rgb(0, 79, 247),
+    '80%': rgb(51, 114, 249),
+    '60%': rgb(102, 149, 250),
+    '30%': rgb(178, 202, 253),
+    '10%': rgb(229, 237, 254),
+    '5%': rgb(242, 246, 255),
   ),
   'orange': (
-    '110%': #de9700,
-    'base': #f7a800,
-    '80%': #f9b933,
-    '60%': #facb66,
-    '30%': #fde5b2,
-    '10%': #fef6e5,
-    '5%': #fffbf2,
+    '110%': rgb(222, 151, 0),
+    'base': rgb(247, 168, 0),
+    '80%': rgb(249, 185, 51),
+    '60%': rgb(250, 203, 102),
+    '30%': rgb(253, 229, 178),
+    '10%': rgb(254, 246, 229),
+    '5%': rgb(255, 251, 242),
   ),
   'gray': (
-    '110%': #2e2e2e,
-    'base': #333333,
-    '80%': #5c5c5c,
-    '60%': #858585,
-    '30%': #c2c2c2,
-    '10%': #ebebeb,
-    '5%': #f5f5f5,
+    '110%': rgb(46, 46, 46),
+    'base': rgb(51, 51, 51),
+    '80%': rgb(92, 92, 92),
+    '60%': rgb(133, 133, 133),
+    '30%': rgb(194, 194, 194),
+    '10%': rgb(235, 235, 235),
+    '5%': rgb(245, 245, 245),
   ),
   'menu-dark': (
-    'base': #141414,
-    'text': #cacaca,
-    'border': #333333,
-    'sub-menu': #1d1d1d,
-    'sub-menu-text': #cacaca,
-    'sub-menu-hover': #333333,
-    'anchor': #f7a800,
+    'base': rgb(20, 20, 20),
+    'text': rgb(202, 202, 202),
+    'border': rgb(51, 51, 51),
+    'sub-menu': rgb(29, 29, 29),
+    'sub-menu-text': rgb(202, 202, 202),
+    'sub-menu-hover': rgb(51, 51, 51),
+    'anchor': rgb(247, 168, 0),
   ),
   'menu-light': (
-    'base': #ffffff,
-    'text': #141414,
-    'border': #e6e6e6,
-    'sub-menu': #f1f1f1,
-    'sub-menu-text': #1d1d1d,
-    'sub-menu-hover': #333333,
-    'anchor': #f7a800,
+    'base': rgb(255, 255, 255),
+    'text': rgb(20, 20, 20),
+    'border': rgb(230, 230, 230),
+    'sub-menu': rgb(241, 241, 241),
+    'sub-menu-text': rgb(29, 29, 29),
+    'sub-menu-hover': rgb(51, 51, 51),
+    'anchor': rgb(247, 168, 0),
   ),
   'footer-dark': (
-    'base': #141414,
-    'text': #cacaca,
-    'border': #333333,
-    'anchor': #f7a800,
+    'base': rgb(20, 20, 20),
+    'text': rgb(202, 202, 202),
+    'border': rgb(51, 51, 51),
+    'anchor': rgb(247, 168, 0),
   ),
   'footer-light': (
-    'base': #ffffff,
-    'text': #141414,
-    'border': #e6e6e6,
-    'anchor': #f7a800,
+    'base': rgb(255, 255, 255),
+    'text': rgb(20, 20, 20),
+    'border': rgb(230, 230, 230),
+    'anchor': rgb(247, 168, 0),
   ),
   'white': rgb(255, 255, 255),
   'black': rgb(0, 0, 0),
   'debug': rgb(255, 0, 0),
   'warning': rgb(255, 190, 0),
   'anchor': (
-    'base': rgb(0, 102, 204),
+    'base': rgb(247, 168, 0),
     'link': rgb(0, 102, 204),
     'visited': rgb(128, 0, 128),
     'hover': rgb(50, 152, 255),
