--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<html lang="{{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}" class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get "rootClass" }} {{ .Params.rootClass }} {{ if eq (getenv "NODE_ENV") "development" }}grid-debug{{ end }} no-js">
+<html lang="{{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}"
+  class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get " rootClass" }} {{ .Params.rootClass }} {{ if eq
+  (getenv "NODE_ENV" ) "development" }}grid-debug{{ end }} no-js">
 
 {{ partial "head.html" . }}
 
 <body>
   <div class="main-container internal-pages blog__list">
 
-      {{ partial "header.html" . }}
+    {{ partial "header.html" . }}
 
     <main role="main" id="conteudo" class="main">
+      <div class="container">
+        {{ partial "breadcrumbs.html" . }}
+      </div>
       <section class="blog__list">
         <div class="container">
           <h2 class="title">{{ i18n "lastPosts" | title }}</h2>
           <div class="boxes">
             {{ range .Data.Pages.ByDate.Reverse }}
-                <div class="box">
-                  <a href="/blog/{{ .Params.slug }}">
-                    <div class="box__image">
-                      <img src="{{ .Params.coverPhoto }}" alt="{{ .Params.coverPhotoAlt }}">
-                    </div>
-                    <div class="box__content">
-                      <h2>
-                        {{ if .Params.shortTitle }} {{ .Params.shortTitle }} {{ else }} {{ .Title }} {{ end }}
-                      </h2>
-                    </div>
-                  </a>
-              </div>
-              {{ end }}
+            <div class="box">
+              <a href="/blog/{{ .Params.slug }}">
+                <img src="{{ .Params.image }}" alt="{{ .Params.imageAlt }}">
+                <h2>
+                  {{ if .Params.shortTitle }} {{ .Params.shortTitle }} {{ else }} {{ .Title }} {{ end }}
+                </h2>
+              </a>
             </div>
+            {{ end }}
+          </div>
         </div>
 
       </section>
@@ -37,7 +38,8 @@
 
 
     {{ partial "footer.html" . }}
-</div>
+  </div>
 
 </body>
+
 </html>
