--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -25,7 +25,7 @@
 @import 'components/h-entry', 'components/figure', 'components/button',
   'components/checkbox-and-radio', 'components/output', 'components/progress',
   'components/select', 'components/slider', 'components/text-field',
-  'components/carousel', 'components/logo', 'components/breadcrumbs';
+  'components/carousel', 'components/logo', 'components/embed-container', 'components/breadcrumbs';
 
 // 6. Page-specific styles
 @import 'pages/home';
