fix: update blog

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -6,7 +6,7 @@
 {{ partial "head.html" . }}
 
 <body>
-  <div class="main-container internal-pages blog__list">
+  <div class="main-container internal-pages blog-list">
 
     {{ partial "header.html" . }}
 
@@ -14,16 +14,19 @@
       <div class="container">
         {{ partial "breadcrumbs.html" . }}
       </div>
-      <section class="blog__list">
+      <section class="blog-list">
         <div class="container">
           <h2 class="title">{{ i18n "lastPosts" | title }}</h2>
           <div class="boxes">
             {{ range .Data.Pages.ByDate.Reverse }}
 
-            <div class="box">
+            <div class="post">
               {{ if .Params.video }}
               <div class="embed-container">
-                <iframe width="560" height="315" src="{{ .Params.video }}?controls=0?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                <iframe width="560" height="315" src="{{ .Params.video }}?controls=0?rel=0" title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen>
                 </iframe>
               </div>
               {{ else }}
@@ -31,9 +34,12 @@
                 <img src="{{ .Params.image }}" alt="{{ .Params.imageAlt }}">
               </a>
               {{ end }}
-              <h2>
-                {{ if .Params.shortTitle }} {{ .Params.shortTitle }} {{ else }} {{ .Title }} {{ end }}
-              </h2>
+              <a href="/blog/{{ .Params.slug }}">
+
+                <h2>
+                  {{ if .Params.shortTitle }} {{ .Params.shortTitle }} {{ else }} {{ .Title }} {{ end }}
+                </h2>
+              </a>
               {{ .Content }}
             </div>
             {{ end }}
