--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -193,6 +193,11 @@ p {
   }
 }
 
+.sidebar-title {
+  font-size: to-rem(18px);
+  line-height: to-rem(26px);
+}
+
 .small {
   font-size: to-rem(12px);
   line-height: to-rem(20px);
