--- a/source/stylesheets/layout/_footer.scss
+++ b/source/stylesheets/layout/_footer.scss
@@ -15,7 +15,7 @@
 .footer {
   color: palette('menu-light', 'text');
   background: palette('menu-light');
-
+  border-top: 2px solid palette('gray', '10%');
 
 }
 
