--- a/source/stylesheets/layout/_main.scss
+++ b/source/stylesheets/layout/_main.scss
@@ -8,13 +8,13 @@
  * An `article` element can have the `[role='main']`
  */
 
-.main > section {
+.page > section {
   &:nth-of-type(even) {
     background-color: palette('gray', '5%');
   }
 }
 
-.theme--dark .main > section {
+.theme--dark .page > section {
   &:nth-of-type(even) {
     background-color: palette('gray');
   }
@@ -44,13 +44,22 @@ main,
   margin-left: auto;
 }
 
-section > .container {
+
+.page > section > .container {
   padding-top: to-em(32px);
   padding-bottom: to-em(32px);
 
   @media screen and (min-width: breakpoint('desktop')) {
     padding-top: to-em(80px);
     padding-bottom: to-em(80px);
+  }
+}
+
+.internal-page {
+  padding: 32px 0;
+
+  @media screen and (min-width: breakpoint('tablet__landscape')) {
+    padding: 80px 0;
   }
 }
 
