--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -24,21 +24,24 @@
 
             <div class="post">
               {{ if .Params.video }}
-
-              <div class="embed-container">
-                <iframe width="560" height="315" src="{{ .Params.video }}?controls=0?rel=0" title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen>
-                </iframe>
+              <div class="post__image">
+                <div class="embed-container">
+                  <iframe width="560" height="315" src="{{ .Params.video }}?controls=0?rel=0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                  </iframe>
+                </div>
               </div>
 
               {{ else }}
-
-              <a href="/blog/{{ .Params.slug }}">
-                <img src="{{ .Params.image }}" alt="{{ .Params.imageAlt }}">
-              </a>
-
+              {{ if .Params.image }}
+              <div class="post__image">
+                <a href="/blog/{{ .Params.slug }}">
+                  <img src="{{ .Params.image }}" alt="{{ .Params.imageAlt }}">
+                </a>
+              </div>
+              {{ end }}
               {{ end }}
 
               <div class="rich-text">
